--- a/public/00-modal.html
+++ b/public/00-modal.html
@@ -80,7 +80,7 @@
 					</div>
 				</main>
 				<script>addBlock(`footer`)</script>
-				<div id="footerWrap"></div>
+				<div id="footerWrap"></div><img class="page-bg" src="img/svg/page-bg.svg" alt="" loading="lazy"/>
 			</div>
 		</div>
 		<script src="libs/jquery/jquery.min.js"></script>
