--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 	<head>
 		<meta charset="utf-8">
-		<title>Главная</title>
+		<title>Объект</title>
 		<meta name="description" content="о чем страница">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width,initial-scale=1.0,  shrink-to-fit=no">
@@ -70,63 +70,126 @@
 			</aside>
 			<div class="main-center-wrap">
 				<main>
-					<div class="ratiod"></div>
-					<button type="button" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Объекты">divdiv</button>
-					<!-- start headerBlock-->
-					<div class="headerBlock section" id="headerBlock">
-						<div class="container">
-							<div class="section-title text-center">
-								<h2>headerBlock ds dfsdfdsfsd</h2>
-								<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae, quo!</p>
-								<div class="text-10">Lorem ipsum dolor sit amet consectetur adipisicing elit.</div>
-								<div class="text-14">Lorem ipsum dolor sit amet.</div>
-							</div>
-							<div class="row"></div>
+					<div class="page-head">
+						<div class="container-fluid">
+							<nav class="swiper breadcrumb-slider--js" aria-label="breadcrumb">
+								<ol class="breadcrumb swiper-wrapper" itemscope="itemscope" itemtype="http://schema.org/BreadcrumbList">
+									<li class="breadcrumb-item active swiper-slide" itemprop="itemListElement" itemscope="itemscope" itemtype="http://schema.org/ListItem"><a href="/" itemprop="item"><span itemprop="name">Объекты</span>
+											<meta itemprop="position" content="1"/></a></li>
+								</ol>
+							</nav>
+							<h1>Объекты</h1>
 						</div>
 					</div>
-					<!-- end headerBlock-->
-					<!-- start sForm-->
-					<section class="sForm section" id="sForm">
-						<div class="container">
-							<div class="section-title text-center">
-								<h2>sForm</h2>
-							</div>
-							<div class="sForm__row row">
-							</div>
-							<div class="form-wrap">
-								<form>
-									<div class="form-wrap__input-wrap form-group"><input class="form-wrap__input form-control" name="" type="text" placeholder=""/>
+					<!-- start sObject-->
+					<section class="sObject section" id="sObject">
+						<div class="container-fluid">
+							<div class="sObject__row row">
+								<div class="col-lg-3">
+									<div class="sObject-card"><a class="h3" href="#">ЖК Ново-садовое</a>
+										<p>12 ноя - 23 дек 2023</p>
+										<div class="sObject-card__row row">
+											<div class="col">
+												<div class="badge badge-purple"> <img class="img-svg-js" src="img/svg/time.svg" alt="" loading="lazy"/>Планирование
+												</div>
+											</div>
+											<div class="col-auto">
+												<a class="sObject-card__link" href="#">
+													<svg class="icon icon-edit ">
+														<use xlink:href="img/svg/sprite.svg#edit"></use>
+													</svg>
+												</a>
+											</div>
+										</div>
+										<div class="sObject-card__line" style="--bgDefColor: #9A52DF; --width: undefined">
+										</div>
 									</div>
-									<!-- +e.input-wrap-->
-									<div class="form-wrap__input-wrap form-group"><input class="form-wrap__input form-control" name="" type="text" placeholder=""/>
+								</div>
+								<div class="col-lg-3">
+									<div class="sObject-card"><a class="h3" href="#">КП Волжские усадьбы</a>
+										<p>12 ноя - 23 дек 2023</p>
+										<div class="sObject-card__row row">
+											<div class="col">
+												<div class="badge badge-warning"> <img class="img-svg-js" src="img/svg/play.svg" alt="" loading="lazy"/>В работе 
+												</div>
+											</div>
+											<div class="col-auto">
+												<a class="sObject-card__link" href="#">
+													<svg class="icon icon-edit ">
+														<use xlink:href="img/svg/sprite.svg#edit"></use>
+													</svg>
+												</a>
+											</div>
+										</div>
+										<div class="sObject-card__line" style="--bgDefColor: #467CF4; --width: 34%">
+										</div>
 									</div>
-									<!-- +e.input-wrap-->
-									<div class="form-wrap__input-wrap form-group"><input class="form-wrap__input form-control" name="" type="text" placeholder=""/>
+								</div>
+								<div class="col-lg-3">
+									<div class="sObject-card"><a class="h3" href="#">ЖК Династия Парк</a>
+										<p>12 ноя - 23 дек 2023</p>
+										<div class="sObject-card__row row">
+											<div class="col">
+												<div class="badge badge-success"> <img class="img-svg-js" src="img/svg/done.svg" alt="" loading="lazy"/>Завершен
+												</div>
+											</div>
+											<div class="col-auto">
+												<a class="sObject-card__link" href="#">
+													<svg class="icon icon-edit ">
+														<use xlink:href="img/svg/sprite.svg#edit"></use>
+													</svg>
+												</a>
+											</div>
+										</div>
+										<div class="sObject-card__line" style="--bgDefColor: #1DBA6F; --width: 100%">
+										</div>
 									</div>
-									<!-- +e.input-wrap-->
-									<button class="form-wrap__btn btn btn-primary" type="submit">Submit
-									</button>
-									<div class="form-wrap__policy">
-										<label class="custom-input form-check"><input class="custom-input__input form-check-input" name="checkbox" type="checkbox" checked="checked"/><small class="custom-input__text text-secondary">Согласен на обработку и хранение моих персональных данных в соответствии с условиями</small>
-										</label>
+								</div>
+								<div class="col-lg-3">
+									<div class="sObject-card"><a class="h3" href="#">ЖК Орбита</a>
+										<p>12 ноя - 23 дек 2023</p>
+										<div class="sObject-card__row row">
+											<div class="col">
+												<div class="badge badge-secondary"> <img class="img-svg-js" src="img/svg/archive.svg" alt="" loading="lazy"/>Архив
+												</div>
+											</div>
+											<div class="col-auto">
+												<a class="sObject-card__link" href="#">
+													<svg class="icon icon-edit ">
+														<use xlink:href="img/svg/sprite.svg#edit"></use>
+													</svg>
+												</a>
+											</div>
+										</div>
+										<div class="sObject-card__line" style="--bgDefColor: #8B9298; --width: 100%">
+										</div>
 									</div>
-								</form>
+								</div>
+								<div class="col-lg-3">
+									<div class="sObject-card"><a class="h3" href="#">ЖК Видный</a>
+										<p>12 ноя - 23 дек 2023</p>
+										<div class="sObject-card__row row">
+											<div class="col">
+												<div class="badge badge-secondary"> <img class="img-svg-js" src="img/svg/archive.svg" alt="" loading="lazy"/>Архив
+												</div>
+											</div>
+											<div class="col-auto">
+												<a class="sObject-card__link" href="#">
+													<svg class="icon icon-edit ">
+														<use xlink:href="img/svg/sprite.svg#edit"></use>
+													</svg>
+												</a>
+											</div>
+										</div>
+										<div class="sObject-card__line" style="--bgDefColor: #8B9298; --width: 100%">
+										</div>
+									</div>
+								</div>
 							</div>
 						</div>
 					</section>
-					<!-- end sForm-->
-					<!-- start sContact-->
-					<section class="sContact section" id="sContact">
-						<div class="container">
-							<div class="section-title text-center">
-								<h2>sContact</h2>
-							</div>
-							<div class="sContact__row row">
-							</div>
-						</div>
-					</section>
-					<!-- end sContact-->
-				</main>
+					<!-- end sObject-->
+				</main><img class="page-bg" src="img/svg/page-bg.svg" alt="" loading="lazy"/>
 			</div>
 		</div>
 		<script src="libs/jquery/jquery.min.js"></script>
