--- a/public/index.html
+++ b/public/index.html
@@ -85,8 +85,8 @@
 					<section class="sObject section" id="sObject">
 						<div class="container-fluid">
 							<div class="sObject__row row">
-								<div class="col-lg-3">
-									<div class="sObject-card"><a class="h3" href="#">ЖК Ново-садовое</a>
+								<div class="sObject__col col-sm-6 col-lg-4 col-xxl-auto">
+									<div class="sObject-card"><a class="h4" href="#">ЖК Ново-садовое</a>
 										<p>12 ноя - 23 дек 2023</p>
 										<div class="sObject-card__row row">
 											<div class="col">
@@ -105,8 +105,8 @@
 										</div>
 									</div>
 								</div>
-								<div class="col-lg-3">
-									<div class="sObject-card"><a class="h3" href="#">КП Волжские усадьбы</a>
+								<div class="sObject__col col-sm-6 col-lg-4 col-xxl-auto">
+									<div class="sObject-card"><a class="h4" href="#">КП Волжские усадьбы</a>
 										<p>12 ноя - 23 дек 2023</p>
 										<div class="sObject-card__row row">
 											<div class="col">
@@ -125,8 +125,8 @@
 										</div>
 									</div>
 								</div>
-								<div class="col-lg-3">
-									<div class="sObject-card"><a class="h3" href="#">ЖК Династия Парк</a>
+								<div class="sObject__col col-sm-6 col-lg-4 col-xxl-auto">
+									<div class="sObject-card"><a class="h4" href="#">ЖК Династия Парк</a>
 										<p>12 ноя - 23 дек 2023</p>
 										<div class="sObject-card__row row">
 											<div class="col">
@@ -145,8 +145,8 @@
 										</div>
 									</div>
 								</div>
-								<div class="col-lg-3">
-									<div class="sObject-card"><a class="h3" href="#">ЖК Орбита</a>
+								<div class="sObject__col col-sm-6 col-lg-4 col-xxl-auto">
+									<div class="sObject-card"><a class="h4" href="#">ЖК Орбита</a>
 										<p>12 ноя - 23 дек 2023</p>
 										<div class="sObject-card__row row">
 											<div class="col">
@@ -165,8 +165,8 @@
 										</div>
 									</div>
 								</div>
-								<div class="col-lg-3">
-									<div class="sObject-card"><a class="h3" href="#">ЖК Видный</a>
+								<div class="sObject__col col-sm-6 col-lg-4 col-xxl-auto">
+									<div class="sObject-card"><a class="h4" href="#">ЖК Видный</a>
 										<p>12 ноя - 23 дек 2023</p>
 										<div class="sObject-card__row row">
 											<div class="col">
@@ -183,6 +183,17 @@
 										</div>
 										<div class="sObject-card__line" style="--bgDefColor: #8B9298; --width: 100%">
 										</div>
+									</div>
+								</div>
+								<div class="sObject__col col-sm-6 col-lg-4 col-xxl-auto">
+									<div class="sObject-card sObject-card--addNew">
+										<div class="sObject-card__icon">
+											<svg class="icon icon-plus ">
+												<use xlink:href="img/svg/sprite.svg#plus"></use>
+											</svg>
+										</div>
+										<a class="sObject-card__add" href="#">Добавить объект
+										</a>
 									</div>
 								</div>
 							</div>
