--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
 		<link type="image/ico" href="img/favicon.ico" rel="shortcut icon"><meta name="format-detection" content="telephone=no"> 
 		<link href="libs/swiper/swiper-bundle.min.css" rel="stylesheet"/>
 		<link href="libs/@fancyapps/ui/fancybox/fancybox.css" rel="stylesheet"/>
+		<link href="libs/select2/css/select2.min.css" rel="stylesheet"/>
 		<link href="css/main.min.css" rel="stylesheet"/>
 		<script>
 			function addBlock(elem) {
@@ -82,8 +83,40 @@
 						</div>
 					</div>
 					<!-- start sObject-->
-					<section class="sObject section" id="sObject">
+					<div class="sObject section" id="sObject">
 						<div class="container-fluid">
+							<div class="sObject__head-row row">
+								<div class="col-auto ms-auto ms-md-0 me-auto me-md-0">
+									<div class="custom-select-wrap custom-select-wrap--first-type">
+										<select class="basic-select basic-select--js">
+											<option>1</option>
+											<option>2</option>
+											<option>3</option>
+											<option>4</option>
+											<option>5</option>
+											<option>6</option>
+											<option>7</option>
+											<option>8</option>
+											<option>9</option>
+											<option>10</option>
+										</select>
+										<div class="custom-select-wrap__label">Все статусы<span></span>
+										</div>
+									</div>
+								</div>
+								<div class="col-auto ms-auto me-auto me-md-0">
+									<div class="custom-select-wrap custom-select-wrap--second-type">
+										<div class="custom-select-wrap__label text-secondary">Сортировать по
+										</div>
+										<select class="basic-select basic-select--js">
+											<option>Все статусы</option>
+											<option>Планирование</option>
+											<option>В работе</option>
+											<option>Все статусы</option>
+										</select>
+									</div>
+								</div>
+							</div>
 							<div class="sObject__row row">
 								<div class="sObject__col col-sm-6 col-lg-4 col-xxl-auto">
 									<div class="sObject-card"><a class="h4" href="#">ЖК Ново-садовое</a>
@@ -198,7 +231,7 @@
 								</div>
 							</div>
 						</div>
-					</section>
+					</div>
 					<!-- end sObject-->
 				</main><img class="page-bg" src="img/svg/page-bg.svg" alt="" loading="lazy"/>
 			</div>
@@ -206,7 +239,8 @@
 		<script src="libs/jquery/jquery.min.js"></script>
 		<script src="libs/@fancyapps/ui/fancybox/fancybox.umd.js"> </script>
 		<script src="libs/swiper/swiper-bundle.min.js"> </script>
-		<script src="libs/inputmask/inputmask.min.js"> </script><script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+		<script src="libs/inputmask/inputmask.min.js"> </script>
+		<script src="libs/select2/js/select2.min.js"> </script><script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 		<script src="js/common.js"></script>
 	</body>
 </html>
