--- a/public/index.html
+++ b/public/index.html
@@ -119,7 +119,7 @@
 							</div>
 							<div class="sObject__row row">
 								<div class="sObject__col col-sm-6 col-lg-4 col-xxl-auto">
-									<div class="sObject-card"><a class="h4" href="#">ЖК Ново-садовое</a>
+									<div class="sObject-card" style="--bgDefColor: #9A52DF"><a class="h4" href="#">ЖК Ново-садовое</a>
 										<p>12 ноя - 23 дек 2023</p>
 										<div class="sObject-card__row row">
 											<div class="col">
@@ -134,12 +134,12 @@
 												</a>
 											</div>
 										</div>
-										<div class="sObject-card__line" style="--bgDefColor: #9A52DF; --width: undefined">
+										<div class="sObject-card__line" style="--width: undefined">
 										</div>
 									</div>
 								</div>
 								<div class="sObject__col col-sm-6 col-lg-4 col-xxl-auto">
-									<div class="sObject-card"><a class="h4" href="#">КП Волжские усадьбы</a>
+									<div class="sObject-card" style="--bgDefColor: #467CF4"><a class="h4" href="#">КП Волжские усадьбы</a>
 										<p>12 ноя - 23 дек 2023</p>
 										<div class="sObject-card__row row">
 											<div class="col">
@@ -154,12 +154,12 @@
 												</a>
 											</div>
 										</div>
-										<div class="sObject-card__line" style="--bgDefColor: #467CF4; --width: 34%">
+										<div class="sObject-card__line" style="--width: 34%">
 										</div>
 									</div>
 								</div>
 								<div class="sObject__col col-sm-6 col-lg-4 col-xxl-auto">
-									<div class="sObject-card"><a class="h4" href="#">ЖК Династия Парк</a>
+									<div class="sObject-card" style="--bgDefColor: #1DBA6F"><a class="h4" href="#">ЖК Династия Парк</a>
 										<p>12 ноя - 23 дек 2023</p>
 										<div class="sObject-card__row row">
 											<div class="col">
@@ -174,12 +174,12 @@
 												</a>
 											</div>
 										</div>
-										<div class="sObject-card__line" style="--bgDefColor: #1DBA6F; --width: 100%">
+										<div class="sObject-card__line" style="--width: 100%">
 										</div>
 									</div>
 								</div>
 								<div class="sObject__col col-sm-6 col-lg-4 col-xxl-auto">
-									<div class="sObject-card"><a class="h4" href="#">ЖК Орбита</a>
+									<div class="sObject-card" style="--bgDefColor: #8B9298"><a class="h4" href="#">ЖК Орбита</a>
 										<p>12 ноя - 23 дек 2023</p>
 										<div class="sObject-card__row row">
 											<div class="col">
@@ -194,12 +194,12 @@
 												</a>
 											</div>
 										</div>
-										<div class="sObject-card__line" style="--bgDefColor: #8B9298; --width: 100%">
+										<div class="sObject-card__line" style="--width: 100%">
 										</div>
 									</div>
 								</div>
 								<div class="sObject__col col-sm-6 col-lg-4 col-xxl-auto">
-									<div class="sObject-card"><a class="h4" href="#">ЖК Видный</a>
+									<div class="sObject-card" style="--bgDefColor: #8B9298"><a class="h4" href="#">ЖК Видный</a>
 										<p>12 ноя - 23 дек 2023</p>
 										<div class="sObject-card__row row">
 											<div class="col">
@@ -214,12 +214,12 @@
 												</a>
 											</div>
 										</div>
-										<div class="sObject-card__line" style="--bgDefColor: #8B9298; --width: 100%">
+										<div class="sObject-card__line" style="--width: 100%">
 										</div>
 									</div>
 								</div>
 								<div class="sObject__col col-sm-6 col-lg-4 col-xxl-auto">
-									<div class="sObject-card sObject-card--addNew">
+									<div class="sObject-card sObject-card--addNew" style="--bgDefColor: ">
 										<div class="sObject-card__icon">
 											<svg class="icon icon-plus ">
 												<use xlink:href="img/svg/sprite.svg#plus"></use>
