--- a/public/01-2-object.html
+++ b/public/01-2-object.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 	<head>
 		<meta charset="utf-8">
-		<title>Объект</title>
+		<title>Объект 01-2</title>
 		<meta name="description" content="о чем страница">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width,initial-scale=1.0,  shrink-to-fit=no">
@@ -71,174 +71,56 @@
 			</aside>
 			<div class="main-center-wrap">
 				<main>
-					<div class="page-head">
+					<div class="page-head mb-0">
 						<div class="container-fluid">
 							<div class="row align-items-center">
 								<div class="col">
 									<nav class="swiper breadcrumb-slider--js" aria-label="breadcrumb">
 										<ol class="breadcrumb swiper-wrapper" itemscope="itemscope" itemtype="http://schema.org/BreadcrumbList">
-											<li class="breadcrumb-item active swiper-slide" itemprop="itemListElement" itemscope="itemscope" itemtype="http://schema.org/ListItem"><a href="/" itemprop="item"><span itemprop="name">Объекты</span>
+											<li class="breadcrumb-item swiper-slide" itemprop="itemListElement" itemscope="itemscope" itemtype="http://schema.org/ListItem"><a href="/" itemprop="item"><span itemprop="name">Объекты</span>
 													<meta itemprop="position" content="1"/></a></li>
+											<li class="breadcrumb-item active swiper-slide" itemprop="itemListElement" itemscope="itemscope" itemtype="http://schema.org/ListItem"><a href="#" itemprop="item"><span itemprop="name">ЖК видный</span>
+													<meta itemprop="position" content="2"/></a></li>
 										</ol>
 									</nav>
 								</div>
 								<div class="col-auto d-none d-md-block">
+									<a class="page-head__edit" href="#">Редактировать
+										<svg class="icon icon-edit ">
+											<use xlink:href="img/svg/sprite.svg#edit"></use>
+										</svg>
+									</a>
 								</div>
 							</div>
-							<h1>Объекты</h1>
 						</div>
 					</div>
-					<!-- start sObject-->
-					<div class="sObject section" id="sObject">
-						<div class="container-fluid">
-							<div class="sObject__head-row row">
-								<div class="col-auto ms-auto ms-md-0 me-auto me-md-0">
-									<div class="custom-select-wrap custom-select-wrap--first-type">
-										<select class="basic-select basic-select--js">
-											<option>1</option>
-											<option>2</option>
-											<option>3</option>
-											<option>4</option>
-											<option>5</option>
-											<option>6</option>
-											<option>7</option>
-											<option>8</option>
-											<option>9</option>
-											<option>10</option>
-										</select>
-										<div class="custom-select-wrap__label">Все статусы<span></span>
-										</div>
+					<!-- start sPageInfo-->
+					<div class="sPageInfo section" id="sPageInfo">
+						<div class="sPageInfo__continer container-fluid">
+							<div class="sPageInfo__wrap bg-wrap"><img class="object-fit-js picture-bg" src="img/service-1.jpg" alt="" loading="lazy"/>
+								<div class="sPageInfo__row row">
+									<div class="col-md">
+										<h1>ЖК видный</h1>
 									</div>
-								</div>
-								<div class="col-auto ms-auto me-auto me-md-0">
-									<div class="custom-select-wrap custom-select-wrap--second-type">
-										<div class="custom-select-wrap__label text-secondary">Сортировать по
-										</div>
-										<select class="basic-select basic-select--js">
-											<option>Все статусы</option>
-											<option>Планирование</option>
-											<option>В работе</option>
-											<option>Все статусы</option>
-										</select>
-									</div>
-								</div>
-							</div>
-							<div class="sObject__row row">
-								<div class="sObject__col col-sm-6 col-lg-4 col-xxl-auto">
-									<div class="sObject-card" style="--bgDefColor: #9A52DF"><a class="h4" href="#">ЖК Ново-садовое</a>
-										<p>12 ноя - 23 дек 2023</p>
-										<div class="sObject-card__row row">
-											<div class="col">
-												<div class="badge badge-purple"> <img class="img-svg-js" src="img/svg/time.svg" alt="" loading="lazy"/>Планирование
-												</div>
+									<div class="col-md-auto">
+										<div class="sPageInfo__inner-wrap">
+											<div class="sPageInfo__task-stat">
+												<svg class="icon icon-fist ">
+													<use xlink:href="img/svg/sprite.svg#fist"></use>
+												</svg>321/433
 											</div>
-											<div class="col-auto">
-												<a class="sObject-card__link" href="#">
-													<svg class="icon icon-edit ">
-														<use xlink:href="img/svg/sprite.svg#edit"></use>
-													</svg>
-												</a>
+											<div class="sPageInfo__date">
+												<svg class="icon icon-calendar ">
+													<use xlink:href="img/svg/sprite.svg#calendar"></use>
+												</svg>11 ноя 23 – 11 фев 24
 											</div>
 										</div>
-										<div class="sObject-card__line" style="--width: undefined">
-										</div>
-									</div>
-								</div>
-								<div class="sObject__col col-sm-6 col-lg-4 col-xxl-auto">
-									<div class="sObject-card" style="--bgDefColor: #467CF4"><a class="h4" href="#">КП Волжские усадьбы</a>
-										<p>12 ноя - 23 дек 2023</p>
-										<div class="sObject-card__row row">
-											<div class="col">
-												<div class="badge badge-warning"> <img class="img-svg-js" src="img/svg/play.svg" alt="" loading="lazy"/>В работе 
-												</div>
-											</div>
-											<div class="col-auto">
-												<a class="sObject-card__link" href="#">
-													<svg class="icon icon-edit ">
-														<use xlink:href="img/svg/sprite.svg#edit"></use>
-													</svg>
-												</a>
-											</div>
-										</div>
-										<div class="sObject-card__line" style="--width: 34%">
-										</div>
-									</div>
-								</div>
-								<div class="sObject__col col-sm-6 col-lg-4 col-xxl-auto">
-									<div class="sObject-card" style="--bgDefColor: #1DBA6F"><a class="h4" href="#">ЖК Династия Парк</a>
-										<p>12 ноя - 23 дек 2023</p>
-										<div class="sObject-card__row row">
-											<div class="col">
-												<div class="badge badge-success"> <img class="img-svg-js" src="img/svg/done.svg" alt="" loading="lazy"/>Завершен
-												</div>
-											</div>
-											<div class="col-auto">
-												<a class="sObject-card__link" href="#">
-													<svg class="icon icon-edit ">
-														<use xlink:href="img/svg/sprite.svg#edit"></use>
-													</svg>
-												</a>
-											</div>
-										</div>
-										<div class="sObject-card__line" style="--width: 100%">
-										</div>
-									</div>
-								</div>
-								<div class="sObject__col col-sm-6 col-lg-4 col-xxl-auto">
-									<div class="sObject-card" style="--bgDefColor: #8B9298"><a class="h4" href="#">ЖК Орбита</a>
-										<p>12 ноя - 23 дек 2023</p>
-										<div class="sObject-card__row row">
-											<div class="col">
-												<div class="badge badge-secondary"> <img class="img-svg-js" src="img/svg/archive.svg" alt="" loading="lazy"/>Архив
-												</div>
-											</div>
-											<div class="col-auto">
-												<a class="sObject-card__link" href="#">
-													<svg class="icon icon-edit ">
-														<use xlink:href="img/svg/sprite.svg#edit"></use>
-													</svg>
-												</a>
-											</div>
-										</div>
-										<div class="sObject-card__line" style="--width: 100%">
-										</div>
-									</div>
-								</div>
-								<div class="sObject__col col-sm-6 col-lg-4 col-xxl-auto">
-									<div class="sObject-card" style="--bgDefColor: #8B9298"><a class="h4" href="#">ЖК Видный</a>
-										<p>12 ноя - 23 дек 2023</p>
-										<div class="sObject-card__row row">
-											<div class="col">
-												<div class="badge badge-secondary"> <img class="img-svg-js" src="img/svg/archive.svg" alt="" loading="lazy"/>Архив
-												</div>
-											</div>
-											<div class="col-auto">
-												<a class="sObject-card__link" href="#">
-													<svg class="icon icon-edit ">
-														<use xlink:href="img/svg/sprite.svg#edit"></use>
-													</svg>
-												</a>
-											</div>
-										</div>
-										<div class="sObject-card__line" style="--width: 100%">
-										</div>
-									</div>
-								</div>
-								<div class="sObject__col col-sm-6 col-lg-4 col-xxl-auto">
-									<div class="sObject-card sObject-card--addNew" style="--bgDefColor: ">
-										<div class="sObject-card__icon">
-											<svg class="icon icon-plus ">
-												<use xlink:href="img/svg/sprite.svg#plus"></use>
-											</svg>
-										</div>
-										<a class="sObject-card__add" href="#">Добавить объект
-										</a>
 									</div>
 								</div>
 							</div>
 						</div>
 					</div>
-					<!-- end sObject-->
+					<!-- end sPageInfo-->
 				</main><img class="page-bg" src="img/svg/page-bg.svg" alt="" loading="lazy"/>
 			</div>
 		</div>
