--- a/public/01-2-object.html
+++ b/public/01-2-object.html
@@ -104,15 +104,76 @@
 									</div>
 									<div class="col-md-auto">
 										<div class="sPageInfo__inner-wrap">
-											<div class="sPageInfo__task-stat">
+											<div class="task-stat">
 												<svg class="icon icon-fist ">
 													<use xlink:href="img/svg/sprite.svg#fist"></use>
 												</svg>321/433
 											</div>
-											<div class="sPageInfo__date">
+											<div class="start-date">
 												<svg class="icon icon-calendar ">
 													<use xlink:href="img/svg/sprite.svg#calendar"></use>
 												</svg>11 ноя 23 – 11 фев 24
+											</div>
+										</div>
+									</div>
+								</div>
+								<div class="sPageInfo__body-row row">
+									<div class="col-md">1</div>
+									<div class="sPageInfo__col col-md-auto">
+										<div class="sPageInfo__inner-row row">
+											<div class="col-12">
+												<div class="work-status">
+													<div class="row">
+														<div class="col">Стяжка пола</div>
+														<div class="col-auto fw-500">22%</div>
+													</div>
+													<div class="line" style="--w: 22%; --bgColor: #467CF4"></div>
+												</div>
+											</div>
+											<div class="col-12">
+												<div class="work-status disabled">
+													<div class="row">
+														<div class="col">Натяжка потолка</div>
+														<div class="col-auto fw-500">63%</div>
+													</div>
+													<div class="line" style="--w: 63%; --bgColor: #1DBA6F"></div>
+												</div>
+											</div>
+											<div class="col-12">
+												<div class="work-status disabled">
+													<div class="row">
+														<div class="col">Штукатурка стен</div>
+														<div class="col-auto fw-500">90%</div>
+													</div>
+													<div class="line" style="--w: 90%; --bgColor: #F4B13E"></div>
+												</div>
+											</div>
+											<div class="col-12">
+												<div class="work-status disabled">
+													<div class="row">
+														<div class="col">Шпаклевание стен</div>
+														<div class="col-auto fw-500">33%</div>
+													</div>
+													<div class="line" style="--w: 33%; --bgColor: #9A52DF"></div>
+												</div>
+											</div>
+											<div class="col-12">
+												<div class="work-status disabled">
+													<div class="row">
+														<div class="col">Затирка</div>
+														<div class="col-auto fw-500">100%</div>
+													</div>
+													<div class="line" style="--w: 100%; --bgColor: #E94410"></div>
+												</div>
+											</div>
+											<div class="col-12">
+												<div class="work-status disabled">
+													<div class="row">
+														<div class="col">Плинтус</div>
+														<div class="col-auto fw-500">3%</div>
+													</div>
+													<div class="line" style="--w: 3%; --bgColor: #8B9298"></div>
+												</div>
 											</div>
 										</div>
 									</div>
