--- a/public/01-2-object.html
+++ b/public/01-2-object.html
@@ -24,7 +24,7 @@
 			}
 		</script>
 	</head>
-	<body class="main-page" data-bg="main.jpg">
+	<body class="main-page" data-bg="01-2-object.jpg">
 		<div class="main-wrapper">
 			<aside> 
 				<div class="aside-wrap">
