--- a/public/01-3-house.html
+++ b/public/01-3-house.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 	<head>
 		<meta charset="utf-8">
-		<title>Объект 01-2</title>
+		<title>Дом №1</title>
 		<meta name="description" content="о чем страница">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width,initial-scale=1.0,  shrink-to-fit=no">
@@ -24,7 +24,7 @@
 			}
 		</script>
 	</head>
-	<body class="main-page" data-bg="01-2-object.jpg">
+	<body class="main-page" data-bg="01-3-house.jpg">
 		<div class="main-wrapper">
 			<aside> 
 				<div class="aside-wrap">
@@ -79,12 +79,14 @@
 										<ol class="breadcrumb swiper-wrapper" itemscope="itemscope" itemtype="http://schema.org/BreadcrumbList">
 											<li class="breadcrumb-item swiper-slide" itemprop="itemListElement" itemscope="itemscope" itemtype="http://schema.org/ListItem"><a href="/" itemprop="item"><span itemprop="name">Объекты</span>
 													<meta itemprop="position" content="1"/></a></li>
-											<li class="breadcrumb-item active swiper-slide" itemprop="itemListElement" itemscope="itemscope" itemtype="http://schema.org/ListItem"><a href="#" itemprop="item"><span itemprop="name">ЖК видный</span>
+											<li class="breadcrumb-item swiper-slide" itemprop="itemListElement" itemscope="itemscope" itemtype="http://schema.org/ListItem"><a href="#" itemprop="item"><span itemprop="name">ЖК видный</span>
 													<meta itemprop="position" content="2"/></a></li>
+											<li class="breadcrumb-item active swiper-slide" itemprop="itemListElement" itemscope="itemscope" itemtype="http://schema.org/ListItem"><a href="#" itemprop="item"><span itemprop="name">Дом №1</span>
+													<meta itemprop="position" content="3"/></a></li>
 										</ol>
 									</nav>
 								</div>
-								<div class="col-md-auto d-none d-md-block">
+								<div class="col-md-auto">
 									<a class="page-head__edit" href="#">Редактировать
 										<svg class="icon icon-edit ">
 											<use xlink:href="img/svg/sprite.svg#edit"></use>
@@ -92,97 +94,14 @@
 									</a>
 								</div>
 								<div class="col-12 d-none d-md-block m-0 p-0"></div>
-							</div>
-						</div>
-					</div>
-					<!-- start sPageInfo-->
-					<div class="sPageInfo section" id="sPageInfo">
-						<div class="sPageInfo__continer container-fluid">
-							<div class="sPageInfo__wrap bg-wrap"><img class="object-fit-js picture-bg" src="img/service-1.jpg" alt="" loading="lazy"/>
-								<div class="sPageInfo__row row">
-									<div class="col-md">
-										<h1>ЖК видный</h1>
-									</div>
-									<div class="col-md-auto">
-										<div class="sPageInfo__inner-wrap">
-											<div class="task-stat">
-												<svg class="icon icon-fist ">
-													<use xlink:href="img/svg/sprite.svg#fist"></use>
-												</svg>321/433
-											</div>
-											<div class="start-date">
-												<svg class="icon icon-calendar ">
-													<use xlink:href="img/svg/sprite.svg#calendar"></use>
-												</svg>11 ноя 23 – 11 фев 24
-											</div>
-										</div>
-									</div>
-								</div>
-								<div class="sPageInfo__body-row row">
-									<div class="col-md">1</div>
-									<div class="sPageInfo__col col-md-auto">
-										<div class="sPageInfo__inner-row row">
-											<div class="col-12">
-												<div class="work-status">
-													<div class="row">
-														<div class="col">Стяжка пола</div>
-														<div class="col-auto fw-500">22%</div>
-													</div>
-													<div class="line" style="--w: 22%; --bgColor: #467CF4"></div>
-												</div>
-											</div>
-											<div class="col-12">
-												<div class="work-status disabled">
-													<div class="row">
-														<div class="col">Натяжка потолка</div>
-														<div class="col-auto fw-500">63%</div>
-													</div>
-													<div class="line" style="--w: 63%; --bgColor: #1DBA6F"></div>
-												</div>
-											</div>
-											<div class="col-12">
-												<div class="work-status disabled">
-													<div class="row">
-														<div class="col">Штукатурка стен</div>
-														<div class="col-auto fw-500">90%</div>
-													</div>
-													<div class="line" style="--w: 90%; --bgColor: #F4B13E"></div>
-												</div>
-											</div>
-											<div class="col-12">
-												<div class="work-status disabled">
-													<div class="row">
-														<div class="col">Шпаклевание стен</div>
-														<div class="col-auto fw-500">33%</div>
-													</div>
-													<div class="line" style="--w: 33%; --bgColor: #9A52DF"></div>
-												</div>
-											</div>
-											<div class="col-12">
-												<div class="work-status disabled">
-													<div class="row">
-														<div class="col">Затирка</div>
-														<div class="col-auto fw-500">100%</div>
-													</div>
-													<div class="line" style="--w: 100%; --bgColor: #E94410"></div>
-												</div>
-											</div>
-											<div class="col-12">
-												<div class="work-status disabled">
-													<div class="row">
-														<div class="col">Плинтус</div>
-														<div class="col-auto fw-500">3%</div>
-													</div>
-													<div class="line" style="--w: 3%; --bgColor: #8B9298"></div>
-												</div>
-											</div>
-										</div>
-									</div>
+								<div class="col">
+									<h1>Подъезд №2
+										<div class="badge badge-primary">33%</div>
+									</h1>
 								</div>
 							</div>
 						</div>
 					</div>
-					<!-- end sPageInfo-->
 				</main><img class="page-bg" src="img/svg/page-bg.svg" alt="" loading="lazy"/>
 			</div>
 		</div>
