--- a/public/index.html
+++ b/public/index.html
@@ -73,7 +73,7 @@
 				<main>
 					<div class="page-head">
 						<div class="container-fluid">
-							<div class="row align-items-center">
+							<div class="page-head__row row align-items-center">
 								<div class="col">
 									<nav class="swiper breadcrumb-slider--js" aria-label="breadcrumb">
 										<ol class="breadcrumb swiper-wrapper" itemscope="itemscope" itemtype="http://schema.org/BreadcrumbList">
@@ -82,8 +82,12 @@
 										</ol>
 									</nav>
 								</div>
+								<div class="col-12 d-none d-md-block m-0 p-0"></div>
+								<div class="col">
+									<h1>Объекты
+									</h1>
+								</div>
 							</div>
-							<h1>Объекты</h1>
 						</div>
 					</div>
 					<!-- start sObject-->
