--- a/public/01-2-object.html
+++ b/public/01-2-object.html
@@ -84,14 +84,14 @@
 										</ol>
 									</nav>
 								</div>
-								<div class="col-md-auto d-none d-md-block">
+								<div class="col-12 d-none d-md-block m-0 p-0 order-md-3"></div>
+								<div class="col-md-auto order-md-2 d-none d-md-block">
 									<a class="page-head__edit" href="#">Редактировать
 										<svg class="icon icon-edit ">
 											<use xlink:href="img/svg/sprite.svg#edit"></use>
 										</svg>
 									</a>
 								</div>
-								<div class="col-12 d-none d-md-block m-0 p-0"></div>
 							</div>
 						</div>
 					</div>
