--- a/public/index.html
+++ b/public/index.html
@@ -82,11 +82,11 @@
 										</ol>
 									</nav>
 								</div>
-								<div class="col-12 d-none d-md-block m-0 p-0"></div>
-								<div class="col">
+								<div class="col-lg order-md-4">
 									<h1>Объекты
 									</h1>
 								</div>
+								<div class="col-12 d-none d-md-block m-0 p-0 order-md-3"></div>
 							</div>
 						</div>
 					</div>
