--- a/public/01-3-house.html
+++ b/public/01-3-house.html
@@ -116,6 +116,82 @@
 							</div>
 						</div>
 					</div>
+					<!-- start sObjectDetails-->
+					<div class="sObjectDetails section" id="sObjectDetails">
+						<div class="container-fluid">
+							<div class="sObjectDetails__header">
+								<div class="detailsHead">
+									<div class="detailsHead__row row"> 
+										<div class="detailsHead__col col-sm-auto">12 под
+										</div>
+										<div class="detailsHead__col col-sm-auto">728 кв
+										</div>
+										<div class="detailsHead__col col-sm-auto">1350 пом
+										</div>
+										<div class="detailsHead__col col-sm-auto">S 3440 м²
+										</div>
+									</div>
+								</div>
+								<div class="sObjectDetails__row row">
+									<div class="col-sm-6 col-lg-4 col-xl-3">
+										<div class="work-status">
+											<div class="row">
+												<div class="col">Стяжка пола</div>
+												<div class="col-auto fw-500">22%</div>
+											</div>
+											<div class="line" style="--w: 22%; --bgColor: #467CF4"></div>
+										</div>
+									</div>
+									<div class="col-sm-6 col-lg-4 col-xl-3">
+										<div class="work-status">
+											<div class="row">
+												<div class="col">Натяжка потолка</div>
+												<div class="col-auto fw-500">63%</div>
+											</div>
+											<div class="line" style="--w: 63%; --bgColor: #1DBA6F"></div>
+										</div>
+									</div>
+									<div class="col-sm-6 col-lg-4 col-xl-3">
+										<div class="work-status">
+											<div class="row">
+												<div class="col">Штукатурка стен</div>
+												<div class="col-auto fw-500">90%</div>
+											</div>
+											<div class="line" style="--w: 90%; --bgColor: #F4B13E"></div>
+										</div>
+									</div>
+									<div class="col-sm-6 col-lg-4 col-xl-3">
+										<div class="work-status">
+											<div class="row">
+												<div class="col">Шпаклевка стен</div>
+												<div class="col-auto fw-500">33%</div>
+											</div>
+											<div class="line" style="--w: 33%; --bgColor: #9A52DF"></div>
+										</div>
+									</div>
+									<div class="col-sm-6 col-lg-4 col-xl-3">
+										<div class="work-status">
+											<div class="row">
+												<div class="col">Затирка</div>
+												<div class="col-auto fw-500">100%</div>
+											</div>
+											<div class="line" style="--w: 100%; --bgColor: #E94410"></div>
+										</div>
+									</div>
+									<div class="col-sm-6 col-lg-4 col-xl-3">
+										<div class="work-status">
+											<div class="row">
+												<div class="col">Плинтус</div>
+												<div class="col-auto fw-500">3%</div>
+											</div>
+											<div class="line" style="--w: 3%; --bgColor: #8B9298"></div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<!-- end sObjectDetails-->
 				</main><img class="page-bg" src="img/svg/page-bg.svg" alt="" loading="lazy"/>
 			</div>
 		</div>
