--- a/public/01-3-house.html
+++ b/public/01-3-house.html
@@ -120,18 +120,25 @@
 					<div class="sObjectDetails section" id="sObjectDetails">
 						<div class="container-fluid">
 							<div class="sObjectDetails__header">
-								<div class="detailsHead">
-									<div class="detailsHead__row row"> 
-										<div class="detailsHead__col col-sm-auto">12 под
-										</div>
-										<div class="detailsHead__col col-sm-auto">728 кв
-										</div>
-										<div class="detailsHead__col col-sm-auto">1350 пом
-										</div>
-										<div class="detailsHead__col col-sm-auto">S 3440 м²
+								<div class="toggle-wrap-js">
+									<div class="detailsHead">
+										<div class="detailsHead__row row">
+											<div class="detailsHead__col col-sm-auto">12 под
+											</div>
+											<div class="detailsHead__col col-sm-auto">728 кв
+											</div>
+											<div class="detailsHead__col col-sm-auto">1350 пом
+											</div>
+											<div class="detailsHead__col col-sm-auto">S 3440 м²
+											</div>
 										</div>
 									</div>
 								</div>
+								<button class="btn-more btn-more--js btn"><span class="btn-more__show">Подробнее</span><span class="btn-more__hide">Свернуть</span>
+									<svg class="icon icon-chevron-down ">
+										<use xlink:href="img/svg/sprite.svg#chevron-down"></use>
+									</svg>
+								</button>
 								<div class="sObjectDetails__row row">
 									<div class="col-sm-6 col-lg-4 col-xl-3">
 										<div class="work-status">
