--- a/public/01-2-object.html
+++ b/public/01-2-object.html
@@ -119,7 +119,20 @@
 									</div>
 								</div>
 								<div class="sPageInfo__body-row row">
-									<div class="col-md">1</div>
+									<div class="col-md">
+										<div class="circular-progress-bar">
+											<div class="percent">
+												<svg>
+													<circle></circle>
+													<circle style="--percent: 34"></circle>
+												</svg>
+												<div class="number">
+													<h2>34%</h2>
+													<p>Прогресс</p>
+												</div>
+											</div>
+										</div>
+									</div>
 									<div class="sPageInfo__col col-md-auto">
 										<div class="sPageInfo__inner-row row">
 											<div class="col-12">
