--- a/public/01-3-house.html
+++ b/public/01-3-house.html
@@ -199,6 +199,54 @@
 						</div>
 					</div>
 					<!-- end sObjectDetails-->
+					<div class="container-fluid mt-4">
+						<div class="toggle-block">
+							<div class="toggle-block__row row">
+								<div class="col-auto">
+									<a class="toggleBtn btn btn-outline-light active" href="#">
+										<svg class="icon icon-list ">
+											<use xlink:href="img/svg/sprite.svg#list"></use>
+										</svg><span>Список</span>
+									</a>
+								</div>
+								<div class="col-auto">
+									<a class="toggleBtn btn btn-outline-light" href="#">
+										<svg class="icon icon-tile ">
+											<use xlink:href="img/svg/sprite.svg#tile"></use>
+										</svg><span>Шахматка</span>
+									</a>
+								</div>
+								<div class="col-auto">
+									<a class="toggleBtn btn btn-outline-light" href="#">
+										<svg class="icon icon-tasks ">
+											<use xlink:href="img/svg/sprite.svg#tasks"></use>
+										</svg><span>Задачи</span>
+									</a>
+								</div>
+								<div class="col-auto">
+									<a class="toggleBtn btn btn-outline-light" href="#">
+										<svg class="icon icon-gantt ">
+											<use xlink:href="img/svg/sprite.svg#gantt"></use>
+										</svg><span>График работ</span>
+									</a>
+								</div>
+								<div class="col-auto">
+									<a class="toggleBtn btn btn-outline-light" href="#">
+										<svg class="icon icon-info ">
+											<use xlink:href="img/svg/sprite.svg#info"></use>
+										</svg><span>Информация</span>
+									</a>
+								</div>
+								<div class="col-auto">
+									<a class="toggleBtn btn btn-outline-light" href="#">
+										<svg class="icon icon-pen ">
+											<use xlink:href="img/svg/sprite.svg#pen"></use>
+										</svg><span>Заметки</span>
+									</a>
+								</div>
+							</div>
+						</div>
+					</div>
 				</main><img class="page-bg" src="img/svg/page-bg.svg" alt="" loading="lazy"/>
 			</div>
 		</div>
