--- a/public/01-3-house.html
+++ b/public/01-3-house.html
@@ -86,27 +86,27 @@
 										</ol>
 									</nav>
 								</div>
-								<div class="col-lg order-md-4">
+								<div class="page-head__col col-lg order-md-4">
 									<h1>Дом №1
 										<div class="badge badge-primary">33%</div>
 									</h1>
 								</div>
 								<div class="col-12 d-none d-md-block m-0 p-0 order-md-3"></div>
-								<div class="col-md-auto order-md-2">
+								<div class="page-head__col col-md-auto order-md-2">
 									<a class="page-head__edit" href="#">Редактировать
 										<svg class="icon icon-edit ">
 											<use xlink:href="img/svg/sprite.svg#edit"></use>
 										</svg>
 									</a>
 								</div>
-								<div class="col-md-auto order-md-last">
+								<div class="page-head__col col-md-auto order-md-last">
 									<div class="start-date">
 										<svg class="icon icon-calendar ">
 											<use xlink:href="img/svg/sprite.svg#calendar"></use>
 										</svg>11 ноя 23 – 11 фев 24
 									</div>
 								</div>
-								<div class="col-md-auto order-md-5">
+								<div class="page-head__col col-md-auto order-md-5">
 									<div class="task-stat">
 										<svg class="icon icon-fist ">
 											<use xlink:href="img/svg/sprite.svg#fist"></use>
