--- a/public/index.html
+++ b/public/index.html
@@ -82,7 +82,7 @@
 										</ol>
 									</nav>
 								</div>
-								<div class="col-lg order-md-4">
+								<div class="page-head__col col-lg order-md-4">
 									<h1>Объекты
 									</h1>
 								</div>
