edit .dateRange-js & .dateSingle-js

--- a/public/01-3-house.html
+++ b/public/01-3-house.html
@@ -247,7 +247,14 @@
 								</div>
 							</div>
 						</div>
-						<input type="text" id="demo">
+						<div class="row">
+							<div class="col-12 mb-5">
+								<input class="dateRange-js" type="text">
+							</div>
+							<div class="col-12">
+								<input class="dateSingle-js" type="text">
+							</div>
+						</div>
 					</div>
 				</main><img class="page-bg" src="img/svg/page-bg.svg" alt="" loading="lazy"/>
 			</div>
