--- a/public/01-2-object.html
+++ b/public/01-2-object.html
@@ -132,6 +132,87 @@
 												</div>
 											</div>
 										</div>
+										<div class="details-with-toggle details-with-toggle--js">
+											<div class="details-with-toggle__wrap">
+												<div class="details-with-toggle__stats-row row">
+													<div class="details-with-toggle__col col-md">
+														<div class="details-with-toggle__item"><span>Срок</span>
+															<p>90дней
+															</p>
+														</div>
+													</div>
+													<div class="details-with-toggle__col col-md">
+														<div class="details-with-toggle__item"><span>До конца</span>
+															<p>76 дней
+															</p>
+														</div>
+													</div>
+													<div class="details-with-toggle__col col-md">
+														<div class="details-with-toggle__item"><span>План</span>
+															<p>11 фев 24
+															</p>
+														</div>
+													</div>
+													<div class="details-with-toggle__col col-md">
+														<div class="details-with-toggle__item"><span>Факт</span>
+															<p class="text-danger">
+																<svg class="icon icon-warning ">
+																	<use xlink:href="img/svg/sprite.svg#warning"></use>
+																</svg>14 фев 24
+															</p>
+														</div>
+													</div>
+													<div class="details-with-toggle__col col-md">
+														<div class="details-with-toggle__item"><span>График</span>
+															<p class="text-danger">
+																<svg class="icon icon-warning ">
+																	<use xlink:href="img/svg/sprite.svg#warning"></use>
+																</svg>3 дн
+															</p>
+														</div>
+													</div>
+												</div>
+												<div class="details-with-toggle__stats-row details-with-toggle__stats-row--without-span row">
+													<div class="details-with-toggle__col col-md">
+														<div class="details-with-toggle__item"><span>Дома</span>
+															<p>3 дом
+															</p>
+														</div>
+													</div>
+													<div class="details-with-toggle__col col-md">
+														<div class="details-with-toggle__item"><span>Подъезды</span>
+															<p>12 под
+															</p>
+														</div>
+													</div>
+													<div class="details-with-toggle__col col-md">
+														<div class="details-with-toggle__item"><span>Квартиры</span>
+															<p>728 кв
+															</p>
+														</div>
+													</div>
+													<div class="details-with-toggle__col col-md">
+														<div class="details-with-toggle__item"><span>Помещения</span>
+															<p>1350 пом
+															</p>
+														</div>
+													</div>
+													<div class="details-with-toggle__col col-md">
+														<div class="details-with-toggle__item"><span>Площадь</span>
+															<p>S 3440 м²
+															</p>
+														</div>
+													</div>
+												</div>
+											</div>
+											<button class="details-with-toggle__btn-more btn d-md-none">
+												<div class="show">Подробнее</div>
+												<div class="hide">Свернуть</div>
+												<svg class="icon icon-chevron-down ">
+													<use xlink:href="img/svg/sprite.svg#chevron-down"></use>
+												</svg>
+											</button>
+										</div>
 									</div>
 									<div class="sPageInfo__col col-md-auto">
 										<div class="sPageInfo__inner-row row">
