--- a/public/01-3-house.html
+++ b/public/01-3-house.html
@@ -120,25 +120,43 @@
 					<div class="sObjectDetails section" id="sObjectDetails">
 						<div class="container-fluid">
 							<div class="sObjectDetails__header">
-								<div class="toggle-wrap-js">
-									<div class="detailsHead">
-										<div class="detailsHead__row row">
-											<div class="detailsHead__col col-sm-auto">12 под
+								<div class="details-with-toggle details-with-toggle--js">
+									<div class="details-with-toggle__wrap">
+										<div class="details-with-toggle__stats-row details-with-toggle__stats-row--without-span row">
+											<div class="details-with-toggle__col col-md-auto">
+												<div class="details-with-toggle__item"><span>Этаж</span>
+													<p>7 эт
+													</p>
+												</div>
 											</div>
-											<div class="detailsHead__col col-sm-auto">728 кв
+											<div class="details-with-toggle__col col-md-auto">
+												<div class="details-with-toggle__item"><span>Квартиры</span>
+													<p>728 кв
+													</p>
+												</div>
 											</div>
-											<div class="detailsHead__col col-sm-auto">1350 пом
+											<div class="details-with-toggle__col col-md-auto">
+												<div class="details-with-toggle__item"><span>Помещения</span>
+													<p>1350 пом
+													</p>
+												</div>
 											</div>
-											<div class="detailsHead__col col-sm-auto">S 3440 м²
+											<div class="details-with-toggle__col col-md-auto">
+												<div class="details-with-toggle__item"><span>Площадь</span>
+													<p>S 3440 м²
+													</p>
+												</div>
 											</div>
 										</div>
 									</div>
+									<button class="details-with-toggle__btn-more btn d-md-none">
+										<div class="show">Подробнее</div>
+										<div class="hide">Свернуть</div>
+										<svg class="icon icon-chevron-down ">
+											<use xlink:href="img/svg/sprite.svg#chevron-down"></use>
+										</svg>
+									</button>
 								</div>
-								<button class="btn-more btn-more--js btn"><span class="btn-more__show">Подробнее</span><span class="btn-more__hide">Свернуть</span>
-									<svg class="icon icon-chevron-down ">
-										<use xlink:href="img/svg/sprite.svg#chevron-down"></use>
-									</svg>
-								</button>
 								<div class="sObjectDetails__row row">
 									<div class="col-sm-6 col-lg-4 col-xl-3">
 										<div class="work-status">
